--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="app.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/4.0/examples/product/product.css" rel="stylesheet">
   </head>
-  <body>
+  <body screen_capture_injected="true" data-new-gr-c-s-check-loaded="14.1006.0" data-gr-ext-installed>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
